<resources>
    <string name="app_name">Vehicle Entry</string>
    <string name="entry_gate">Entry Gate</string>
    <string name="exit_gate">Exit Gate</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="plate_number">Plate Number</string>
    <string name="enter_plate_number">Enter plate number</string>
    <string name="check_and_log_entry">Check &amp; Log Entry</string>
    <string name="record_exit">Record Exit</string>
    <string name="registered_vehicle">REGISTERED VEHICLE</string>
    <string name="unregistered_vehicle">UNREGISTERED VEHICLE</string>
    <string name="checking">Checking…</string>
    <string name="past_entries">Past 3 Entries</string>
    <string name="entry_time">Entry Time</string>
    <string name="exit_time">Exit Time</string>
    <string name="duration_stayed">Duration Stayed</string>
    <string name="register_new_vehicle">Register New Vehicle</string>
    <string name="registered_vehicles">Registered Vehicles</string>
    <string name="recent_logs">Recent Entry Logs</string>
    <string name="owner_name">Owner Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="delete">Delete</string>
</resources>

